apps/services/archivebox/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  labels:
    app: archivebox
  annotations:
    link.argocd.argoproj.io/external-link: https://archive.グルーバー.com
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: archivebox
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      containers:
        - name: archivebox
          image: ghcr.io/archivebox/archivebox/archivebox:0.4.20
          command: ['/app/venv/bin/gunicorn']
          args:
            - --pythonpath
            - /app/venv/lib/python3.10/site-packages/archivebox
            - -b
            - 0.0.0.0:8000
            - --timeout
            - "300"
            - archivebox.wsgi:application
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - name: web
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 80m
              memory: 256Mi
            limits:
              cpu: 220m
              memory: 512Mi
          volumeMounts:
            - name: data-storage
              mountPath: /data
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: archivebox-storage
