apps/services/archivebox/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  labels:
    app: archivebox
  annotations:
    tailscale.com/hostname: "archive"
spec:
  selector:
    app: archivebox
  ports:
    - name: web
      port: 80
      targetPort: 8000
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
